--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Calculator! Made by Kuldeep</title>
     <link rel="stylesheet" href="utlis.css" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
     <h1 class="head">Calculate Your Numbers Here :</h1>
@@ -43,6 +47,36 @@
         <button class="button">=</button>
       </div>
     </div>
+    <footer>
+      <div class="love">
+        Made with<span class="art"> &#10084; </span> by Kuldeep sharma
+      </div>
+      <div class="icons">
+        <!-- instagram icon -->
+
+        <a href="https://www.instagram.com/rohan_.x01" target="_blank">
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+
+        <!-- x icon -->
+
+        <a href="https://twitter.com/RohanKS140" target="_blank">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+
+        <!-- github icon -->
+
+        <a href="https://github.com/Kuldeep-Sharmaa" target="_blank">
+          <i class="fa-brands fa-github"></i
+        ></a>
+
+        <!-- linkedin icon -->
+
+        <a href="www.linkedin.com/in/kuldeep-sharma-a1540a286" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
