--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 
         <!-- linkedin icon -->
 
-        <a href="www.linkedin.com/in/kuldeep-sharma-a1540a286" target="_blank">
+        <a
+          href="https://linkedin.com/in/kuldeep-sharma-a1540a286"
+          target="_blank"
+        >
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
